--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "description": "build script for the flosch.at website",
   "dependencies": {
     "handlebars": ">= 2.0.0-alpha.4",
+    "moment" : ">=2.7.0",
     "metalsmith": "^0.9.0",
     "metalsmith-collections": ">=0.4.1",
     "metalsmith-markdown": ">=0.2.1",
     "metalsmith-permalinks": ">=0.3.0",
-    "metalsmith-templates": ">=0.5.2"
+    "metalsmith-templates": ">=0.5.2",
+    "metalsmith-excerpts": ">=1.0.0"
   }
 }
