--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "metalsmith-branch": "^0.0.4",
     "metalsmith-build-date": "^0.1.0",
     "metalsmith-collections": "^0.6.0",
-    "metalsmith-convert": "0.0.5",
+    "metalsmith-convert": "^0.1.0",
     "metalsmith-excerpts": "^1.0.0",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
