--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-    "name": "flosch.at",
-    "description": "build script for the flosch.at website",
-    "dependencies": {
-	"handlebars": "^4.0.5",
-	"metalsmith": "^2.3.0",
-	"metalsmith-branch": "0.0.4",
-	"metalsmith-build-date": "^0.2.0",
-	"metalsmith-collections": "^0.9.0",
-	"metalsmith-excerpts": "^1.1.0",
-	"metalsmith-layouts": "^1.7.0",
-	"metalsmith-markdown": "^0.2.1",
-	"metalsmith-permalinks": "^0.5.0",
-	"metalsmith-tags": "^2.0.0",
-	"moment": "^2.16.0"
-    },
-    "devDependencies": {
-	"metalsmith-prism": "*"
-    }
+			"name": "flosch.at",
+			"description": "build script for the flosch.at website",
+			"dependencies": {
+						"handlebars": "^4.0.5",
+						"markdown-it": "^8.2.2",
+						"metalsmith": "^2.3.0",
+						"metalsmith-branch": "0.0.4",
+						"metalsmith-build-date": "^0.2.0",
+						"metalsmith-collections": "^0.9.0",
+						"metalsmith-excerpts": "^1.1.0",
+						"metalsmith-layouts": "^1.7.0",
+						"metalsmith-markdown": "^0.2.1",
+						"metalsmith-permalinks": "^0.5.0",
+						"metalsmith-tags": "^2.0.0",
+						"moment": "^2.16.0"
+			},
+			"devDependencies": {
+						"metalsmith-prism": "*"
+			}
 }
