--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 						"metalsmith-layouts": "^1.7.0",
 						"metalsmith-markdown": "^0.2.1",
 						"metalsmith-permalinks": "^0.5.0",
+						"metalsmith-sharp": "^2.1.1",
 						"metalsmith-tags": "^2.0.0",
 						"moment": "^2.16.0"
 			},
