--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 						"metalsmith": "^2.3.0",
 						"metalsmith-branch": "0.0.4",
 						"metalsmith-build-date": "^0.2.0",
+						"metalsmith-clean-css": "^5.0.1",
 						"metalsmith-collections": "^0.9.0",
 						"metalsmith-excerpts": "^1.1.0",
 						"metalsmith-layouts": "^1.7.0",
@@ -14,6 +15,7 @@
 						"metalsmith-permalinks": "^0.5.0",
 						"metalsmith-sharp": "^2.1.1",
 						"metalsmith-tags": "^2.0.0",
+						"metalsmith-uglify": "^1.5.1",
 						"moment": "^2.16.0"
 			},
 			"devDependencies": {
